2013-05-05  Tobias Burnus  <burnus@net-b.de>

PR fortran/57141
        * decl.c (gfc_match_null): Permit use-associated
        NULL intrinsic.

2013-05-05  Tobias Burnus  <burnus@net-b.de>

        PR fortran/57141
        * gfortran.dg/null_8.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198609 138bc75d-0d04-0410-961f-82ee72b054a4